tests/ui/generic-associated-types/bugs/hrtb-implied-1.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/hrtb-implied-1.rs:31:22
   |
LL |     let slice = &mut ();
   |                      ^^ creates a temporary value which is freed while still in use
LL |     let windows = WindowsMut { slice };
LL |     print_items::<WindowsMut<'_>>(windows);
   |     -------------------------------------- argument requires that borrow lasts for `'static`
LL | }
   | - temporary value is freed at the end of this statement
   |
note: due to a current limitation of the type system, this implies a `'static` lifetime
  --> $DIR/hrtb-implied-1.rs:26:5
   |
LL |     for<'a> I::Item<'a>: Debug,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: requirement that the value outlives `'static` introduced here
  --> $DIR/hrtb-implied-1.rs:26:26
   |
LL |     for<'a> I::Item<'a>: Debug,
   |                          ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
